examples/v0.7/errors/missing_return_value.nova
fn value() -> N {

}

print(value())